Clean up CSS, fix whitespace

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -117,13 +117,11 @@ footer{
 	border-spacing: 1em .5em;
 	display: table;
 	margin: 1em auto;
-	width: auto;
+	width: 100%;
 }
 
-#illustration-22{
-	display: table;
-	margin: 1em auto;
-	width: 100%;
+#illustration-22 img{
+	max-height: 40vh
 }
 
 #illustration-22 > div{
@@ -141,10 +139,6 @@ footer{
 
 #illustration-22 > div > div:last-of-type > img{
 	margin-left: 0em;
-}
-
-#illustration-22 img{
-	max-height: 40vh
 }
 
 #illustration-22 figcaption{
